bk_ida/gccida/g2/build_type_attribute_variant
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/build_type_attribute_variant/src/tree.c:3146:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *attributes; // rbp 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/build_type_attribute_variant/src/tree.c:3196:6: error: use of undeclared identifier 'debug_no_type_hash'
if ( debug_no_type_hash ) 
     ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/build_type_attribute_variant/src/tree.c:3211:7: error: use of undeclared identifier 'debug_no_type_hash'
if ( !debug_no_type_hash ) 
      ^
3 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/build_type_attribute_variant/src/obj/tree.o] Error 1
